# rahd

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bump-version.sh
.github/workflows/: ci.yml  release.yml
crates/rahd-ai/: Cargo.toml
crates/rahd-ai/src/: lib.rs
crates/rahd-core/: Cargo.toml
crates/rahd-core/src/: lib.rs
crates/rahd-gui/: Cargo.toml
crates/rahd-gui/src/: app.rs  lib.rs  notifications.rs  theme.rs
crates/rahd-gui/src/views/: day.rs  mod.rs  month.rs  sidebar.rs  toolbar.rs  week.rs
crates/rahd-mcp/: Cargo.toml
crates/rahd-mcp/src/: lib.rs
crates/rahd-schedule/: Cargo.toml
crates/rahd-schedule/src/: lib.rs
crates/rahd-server/: Cargo.toml
crates/rahd-server/src/: hoosh.rs  intents.rs  lib.rs
crates/rahd-store/: Cargo.toml
crates/rahd-store/src/: lib.rs
docs/: README.md  architecture.md  development.md  mcp-tools.md  roadmap.md  usage.md
src/: main.rs
tests/: integration.rs
