[workspace]
resolver = "2"
members = [
    "crates/rahd-core",
    "crates/rahd-store",
    "crates/rahd-schedule",
    "crates/rahd-ai",
    "crates/rahd-mcp",
    "crates/rahd-server",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.8"
tower = "0.5"

[package]
name = "rahd"
version = "2026.3.18"
edition = "2024"
description = "AI-native calendar and contacts for AGNOS"
license = "GPL-3.0"

[dependencies]
rahd-core = { path = "crates/rahd-core" }
rahd-store = { path = "crates/rahd-store" }
rahd-schedule = { path = "crates/rahd-schedule" }
rahd-ai = { path = "crates/rahd-ai" }
rahd-server = { path = "crates/rahd-server" }
clap = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "rahd"
path = "src/main.rs"
