[package]
name = "rahd-core"
version = "2026.3.18-1"
edition = "2024"
description = "Core types for Rahd calendar and contacts"
license = "GPL-3.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
