[package]
name = "rahd-store"
version = "2026.3.18-1"
edition = "2024"
description = "Local SQLite storage for Rahd calendar and contacts"
license = "GPL-3.0"

[dependencies]
rahd-core = { path = "../rahd-core" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
